//! Integration test for inter-service gRPC communication

use anyhow::Result;
use services_common::proto::risk::v1::{
    risk_service_client::RiskServiceClient,
    GetMetricsRequest,
};
use tokio::time::{sleep, Duration};
use tonic::transport::Channel;

#[tokio::test]
async fn test_grpc_connectivity() -> Result<()> {
    // Start risk-manager service in background
    let risk_handle = tokio::spawn(async {
        // This would normally start the actual service
        // For now, we'll simulate it
        println!("Risk service would start here");
        sleep(Duration::from_secs(60)).await;
    });

    // Give service time to start
    sleep(Duration::from_secs(2)).await;

    // Try to connect to risk service
    match RiskServiceClient::connect("http://127.0.0.1:50051").await {
        Ok(mut client) => {
            println!("‚úÖ Connected to Risk Service");
            
            // Try to get metrics
            let request = tonic::Request::new(GetMetricsRequest {});
            match client.get_metrics(request).await {
                Ok(response) => {
                    println!("‚úÖ Successfully called GetMetrics");
                    println!("Response: {:?}", response.into_inner());
                }
                Err(e) => {
                    println!("‚ö†Ô∏è  GetMetrics call failed: {}", e);
                }
            }
        }
        Err(e) => {
            println!("‚ö†Ô∏è  Could not connect to Risk Service: {}", e);
            println!("This is expected if the service is not running");
        }
    }

    // Cleanup
    risk_handle.abort();
    
    Ok(())
}

#[tokio::test] 
async fn test_service_discovery() -> Result<()> {
    // Define service endpoints
    let services = vec![
        ("Risk Manager", "127.0.0.1:50051"),
        ("Market Connector", "127.0.0.1:50052"),
        ("Execution Router", "127.0.0.1:50053"),
        ("Data Aggregator", "127.0.0.1:50054"),
        ("Orderbook", "127.0.0.1:50055"),
    ];

    println!("\nüîç Testing Service Discovery:");
    println!("=" .repeat(50));
    
    for (name, endpoint) in services {
        // Try to establish TCP connection
        match tokio::net::TcpStream::connect(endpoint).await {
            Ok(_) => {
                println!("‚úÖ {} is reachable at {}", name, endpoint);
            }
            Err(_) => {
                println!("‚ö†Ô∏è  {} not running at {}", name, endpoint);
            }
        }
    }
    
    Ok(())
}

#[test]
fn test_proto_compilation() {
    // Verify that proto modules are accessible
    use services_common::proto::{
        auth::v1 as auth_proto,
        execution::v1 as execution_proto,
        marketdata::v1 as market_proto,
        risk::v1 as risk_proto,
    };
    
    println!("\n‚úÖ All proto modules compiled successfully:");
    println!("  - auth::v1");
    println!("  - execution::v1");  
    println!("  - marketdata::v1");
    println!("  - risk::v1");
}